<resources>
    <string name="app_name">El Mecánico Loco Reservar</string>
    <string name="lblnombre">Nombre</string>
    <string name="txtNombre"></string>
    <string name="lbltelf">Teléfono</string>
    <string name="txtTelf"></string>
    <string name="lblmatricula">Matrícula</string>
    <string name="txtMatricula"></string>
    <string name="lblbtncontinuar">Continuar</string>
    <string name="logotipo">logotipo</string>
    <string name="title_activity_reserva">Reserva</string>
    <string name="logotipo2">logotipo</string>
    <string name="lblconfirma">El Mecánico Loco Confirmar Reserva</string>
    <string name="btnreservar">Reservar</string>
    <string name="lblencargo">Tipo de encargo</string>
    <string name="lblotroSlect">indicar por favor</string>
    <string name="lblotro"></string>
    <string name="lblcheckpendiente">Pendiente de Peritage</string>
    <string name="lblaseguradora">Aseguradora</string>
    <string name="lblconfirmarreserva">Confirmar Reserva</string>
    <string-array name="marcas">
        <item>Audi</item>
        <item>Citroen</item>
        <item>Peugot</item>
        <item>Renault</item>
    </string-array>
    <string-array name="mAudi">
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>A5</item>
    </string-array>
    <string-array name="mCitroen">
        <item>Picasso</item>
        <item>C3</item>
        <item>C4</item>
        <item>C5</item>
    </string-array>
    <string-array name="mPeugot">
        <item>206</item>
        <item>306</item>
        <item>406</item>
        <item>407</item>
    </string-array>
    <string-array name="mRenault">
        <item>Clio</item>
        <item>Twingo</item>
        <item>Kangoo</item>
        <item>Megane</item>
    </string-array>




</resources>
