<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.banchero_dam3.jm.ej_tallermecanico.Reserva">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/logotipo"
                android:text="@string/logotipo"
                android:contentDescription="@string/logotipo2" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lblencargo"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:background="@color/colorPrimary" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerTipoEncargo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextOtroEncargo"
                android:inputType="none"
                android:hint="@string/lblotroSlect"
                android:textColor="@color/colorPrimary"
                android:padding="10dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblcheckpendiente"
                android:id="@+id/checkBoxPendiente"
                android:textColor="@color/colorPrimaryDark"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lblaseguradora"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:background="@color/colorPrimary" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:id="@+id/spinnerAseguradoras" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblconfirmarreserva"
                android:id="@+id/buttonConfirmarReserva"
                android:textColor="#ffffff"
                android:background="@color/colorPrimaryDark" />


        </LinearLayout>
    </ScrollView>



</RelativeLayout>
