<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/logotipo"
                android:contentDescription="@string/logotipo" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="208dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/lblnombre"
                    android:id="@+id/textView"
                    android:layout_row="0"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/txtNombre"
                    android:ems="10"
                    android:id="@+id/editTextNombre"
                    android:layout_row="0"
                    android:layout_column="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/lbltelf"
                    android:id="@+id/textView3"
                    android:layout_row="1"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="@string/txtTelf"
                    android:ems="10"
                    android:id="@+id/editTexttelefono"
                    android:layout_row="1"
                    android:layout_column="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/lblmatricula"
                    android:id="@+id/textView4"
                    android:layout_row="2"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/txtMatricula"
                    android:ems="10"
                    android:id="@+id/editTextMatricula"
                    android:layout_row="2"
                    android:layout_column="1" />

                <Spinner
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerMarca"
                    android:layout_row="3"
                    android:layout_column="0" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerModelo"
                    android:layout_row="3"
                    android:layout_column="1" />

            </GridLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnreservar"
                android:id="@+id/buttonReservar"
                android:background="@color/colorPrimaryDark"
                android:textColor="#ffffff"
                android:onClick="reservarOk" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
